[package]
name = "killer-api-gateway"
description = "统一 API 网关 - 流量入口、鉴权、路由、限流"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[lib]
name = "killer_api_gateway"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-extra.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true
tonic.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tracing-opentelemetry.workspace = true
metrics.workspace = true
config.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
redis.workspace = true
thiserror.workspace = true
anyhow.workspace = true
uuid.workspace = true
chrono.workspace = true
moka = { workspace = true, features = ["future"] }
rand = { workspace = true }
governor = "0.6"
nonzero_ext = "0.3"
futures = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
dashmap = "6"
parking_lot = "0.12"
lazy_static = "1.4"
x509-parser = "0.16"
base64 = "0.22"
bytes = "1"
reqwest = { workspace = true, features = ["json"] }
hyper-util = "0.1"
http = "1"
async-stream = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }

# Kubernetes discovery (optional)
[target.'cfg(feature = "kube-discovery")'.dependencies]
kube = { version = "0.90", features = ["client", "runtime"] }
k8s-openapi = { version = "0.21", features = ["v1_28"] }
tokio-stream = "0.1"

killer-types = { path = "../../../libs/common/types" }
killer-observability = { path = "../../../libs/infrastructure/observability" }
killer-auth = { path = "../../../libs/infrastructure/auth" }

[dev-dependencies]
tokio-test.workspace = true
wiremock.workspace = true
reqwest = { workspace = true }

[lints]
workspace = true
