[package]
name = "killer-mdg-service"
version = "0.1.0"
edition = "2021"
authors = ["KILLER ERP Team"]
description = "主数据治理服务 - 集中管理和分发主数据"

[[bin]]
name = "mdg-service"
path = "src/main.rs"

[dependencies]
# 内部依赖 - 主数据契约
killer-organizational-units = { path = "../../../libs/master-data/organizational-units" }
killer-business-partner = { path = "../../../libs/master-data/business-partner" }
killer-material = { path = "../../../libs/master-data/material" }
killer-cost-center = { path = "../../../libs/master-data/cost-center" }

# 内部依赖 - 框架和工具
killer-domain-primitives = { path = "../../../libs/common/domain-primitives" }
killer-types = { path = "../../../libs/common/types" }
killer-cqrs = { path = "../../../libs/frameworks/cqrs" }

# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

# gRPC 框架
tonic = "0.10"
tonic-reflection = "0.10"
prost = "0.12"
prost-types = "0.12"

# HTTP 框架 (健康检查和管理端点)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors", "timeout"] }

# 数据库
sqlx.workspace = true

# 消息队列
rdkafka = { version = "0.36", features = ["tokio"] }

# 缓存
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# 验证
validator = { version = "0.16", features = ["derive"] }

# 时间处理
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志和追踪
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-otlp = "0.14"

# 配置管理
config = "0.13"

# 认证
jsonwebtoken = "9.0"

# 字符串相似度 (重复检测)
strsim = "0.10"

# CSV/JSON 导入
csv = "1.3"

# 并发工具
futures = "0.3"
async-trait = "0.1"

# HTTP 客户端
reqwest = { version = "0.11", features = ["json"] }

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.0"

[features]
default = []
idoc-adapter = []  # SAP IDoc 适配器 (可选)
